fixed horizontal scrolling again

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,11 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
-body {
-  overflow-x: hidden;
+.columns {
+  margin-inline: 0;
+}
+
+.column {
+  padding-inline: 0;
 }
 
 .card-header-icon {
